# church-desktop-website

./: .gitignore  .replit  API.md  VPS-DEPLOYMENT-CHECKLIST.md  package-lock.json  package.json  prayer-display-build.yml  replit.md  tailwind.config.ts
.claude/: settings.local.json
.github/workflows/: kiosk-build.yml
attached_assets/: Pasted-Yes-this-now-does-exactly-what-you-wanted-The-code-that_1782512391848.txt  Pasted-e-System-forwarding-local-port-5000-to-external-port-80_1782513554102.txt
church-app/: .gitignore  package-lock.json  package.json
client/: index.html
client/src/: App.tsx  index.css
kiosk-app/: .gitignore  package.json
kiosk-app/src-tauri/: Cargo.toml  tauri.conf.json
kiosk-app/src-tauri/capabilities/: default.json
kiosk-app/src-tauri/src/: main.rs
migrations/: 0001_flippant_joseph.sql
migrations/meta/: 0000_snapshot.json  0001_snapshot.json  _journal.json
prayer-display-app/: package-lock.json  package.json
prayer-display-app/src-tauri/: Cargo.toml  tauri.conf.json
prayer-display-app/src-tauri/capabilities/: default.json
prayer-display-app/src-tauri/icons/: icon.icns
prayer-display-app/src-tauri/src/: main.rs
server/: auth.ts  db.ts  encryption.ts  eventReminders.ts  gmail.ts  import-saints.ts  index.ts  jwt.ts  memberAuth.ts  r2.ts  restreamManager.ts  routes.ts  seed.ts  storage.ts  stripe.ts  thumbnailGenerator.ts  websocket.ts  youtube.ts  youtubeOauth.ts  youtubeScheduler.ts  youtubeThumbnailUploader.ts
shared/: schema.ts
streaming/: .env.example  docker-compose.yml  mediamtx.yml  setup.sh  upload-recording.sh
(+120 files in other folders)
