[package]
name = "prayer-display"
version = "1.0.0"
description = "Prayer Display Kiosk App"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
lto = true
strip = true
opt-level = "s"
